Movements done, now need to checkEvent after each movement